# Equadium

./: .gitignore  BUILD  LICENSE  MODULE.bazel  requirements.txt
core/: BUILD  ai_agent.py  build_playbook.py  equadium.py  equadium_optimization.py  game_config.py  game_entities.py  game_manager.py  generate_tiles.py  math_engine.py  math_playbook.py  utilities.py
web/: GRAPHICS_STRATEGY.md
web/api/: BUILD  main.py  models.py  test_api.py
web/frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/frontend/src/: main.ts  style.css
web/static/: index.html  palette.css
